delete key from dict

--- a/_posts/2015-01-02-dict.md
+++ b/_posts/2015-01-02-dict.md
@@ -94,7 +94,12 @@ print d  # {1: 1, 2: 4, 'name': 'square'}
 d["name"] = "newname"
 print d  # {1: 1, 2: 4, 'name': 'newname'}
 
+
+print "==================== 删除 ==================="
+del d["name"]
+print d  # {1: 1, 2: 4}
 d["name"] = "square"  # 恢复成原来的名字
+
 
 
 print "==================== list operations of a dict: ==================="
