test module name

--- a/_posts/2015-01-03-module.md
+++ b/_posts/2015-01-03-module.md
@@ -121,3 +121,53 @@ sys.path是个列表, 里面存储着几个路径. 当python代码中, import XX
 import sys
 sys.path.insert(0,'.')
 ```
+
+# 模块名字
+
+每一个模块都有自己的名字. 
+可以在代码中用print __name__ 打印出模块名字
+
+被引用的时候, 模块的名字叫做person或者shape.square  
+如果是直接这样运行: python shape/square.py. 模块的名字就叫做, __main__
+
+目录结构:
+
+```
+   |-- a.py
+   |-- amain.py
+```
+
+a.py
+
+```py
+print __name__
+
+a = 1
+
+if __name__ == '__main__':
+    print a
+```
+
+amain.py
+
+```py
+from a import a
+
+print a
+```
+
+直接运行a.py
+
+```
+% python a.py                                                               ✭
+__main__
+1
+```
+
+运行amain.py
+
+```
+% python amain.py                                                           ✭
+a
+1
+```
