add link in outline page

--- a/_posts/2015-01-01-outline.md
+++ b/_posts/2015-01-01-outline.md
@@ -4,27 +4,28 @@ title:  "大纲"
 date:   2015-01-01 15:21:04 +0800
 ---
 
-# 1. 安装与运行
-# 2. Hello Python
-# 3. 变量 
-- 数字 
-- 字符串 
-- 布尔 
-- None
+# 1. [安装与运行](/install-and-run.html)
+# 2. [Hello Python](/hellopython.html)
+# 3. [变量](/var.html)
+- [数字](/num.html)
+- [字符](/string.html)
+- [布尔](/boolean.html)
+- [None](none.html)
 
-# 4. 语法
+# 4. 简单数据结构
+- [LIST](/list.html)
+- [TUPLE](/tuple.html)
+- [DICT](/dict.html)
+
+# 5. 语法
 - 缩进 
-- IF 
-- FOR 
-- WHILE
+- [IF](/if.html)
+- [FOR](/for.html)
+- [WHILE](/while.html)
 
-# 5. 异常
-# 6. 简单数据结构
-- LIST 
-- TUPLE 
-- DICT
+# 6. [异常](/exception.html)
 
-# 7. 函数
-# 8. 修饰器
-# 9. 类
-# 10. 模块
+# 7. [函数](/func-define.html)
+# 8. [修饰器](/decorator.html)
+# 9. [类](/class.html)
+# 10. [模块](/module.html)
