typo modified:   _posts/2015-01-03-class.md

--- a/_posts/2015-01-03-class.md
+++ b/_posts/2015-01-03-class.md
@@ -293,9 +293,10 @@ class C(object):
     def __init__(self):
         print "init in C"
         self.a = 2
+        self.b = 3
 
     def f2(self):
-        print "f1 defined in C"
+        print "f2 defined in C"
 
 
 class D(B, C):
