--- a/_posts/2015-01-01-outline.md
+++ b/_posts/2015-01-01-outline.md
@@ -16,6 +16,7 @@ date:   2015-01-01 15:21:04 +0800
 - [LIST](/list.html)
 - [TUPLE](/tuple.html)
 - [DICT](/dict.html)
+- [SET](/set.html)
 
 # 5. 语法
 - 缩进 
