modified:   _posts/2015-01-01-outline.md

--- a/_posts/2015-01-01-outline.md
+++ b/_posts/2015-01-01-outline.md
@@ -4,29 +4,29 @@ title:  "大纲"
 date:   2015-01-01 15:21:04 +0800
 ---
 
-# 1. [安装与运行](/install-and-run.html)
-# 2. [Hello Python](/hellopython.html)
-# 3. [变量](/var.html)
-- [数字](/num.html)
-- [字符](/string.html)
-- [布尔](/boolean.html)
+# 1. [安装与运行](install-and-run.html)
+# 2. [Hello Python](hellopython.html)
+# 3. [变量](var.html)
+- [数字](num.html)
+- [字符](string.html)
+- [布尔](boolean.html)
 - [None](none.html)
 
 # 4. 简单数据结构
-- [LIST](/list.html)
-- [TUPLE](/tuple.html)
-- [DICT](/dict.html)
-- [SET](/set.html)
+- [LIST](list.html)
+- [TUPLE](tuple.html)
+- [DICT](dict.html)
+- [SET](set.html)
 
 # 5. 语法
 - 缩进 
-- [IF](/if.html)
-- [FOR](/for.html)
-- [WHILE](/while.html)
+- [IF](if.html)
+- [FOR](for.html)
+- [WHILE](while.html)
 
-# 6. [异常](/exception.html)
+# 6. [异常](exception.html)
 
-# 7. [函数](/func-define.html)
-# 8. [修饰器](/decorator.html)
-# 9. [类](/class.html)
-# 10. [模块](/module.html)
+# 7. [函数](func-define.html)
+# 8. [修饰器](decorator.html)
+# 9. [类](class.html)
+# 10. [模块](module.html)
